--- a/css/header.css
+++ b/css/header.css
@@ -37,6 +37,8 @@
   background-color: transparent;
   border: none;
   outline: none;
+  color: var(--color-text);
+  font-size: 24px;
 }
 
 .header__burger-btn {
@@ -69,3 +71,18 @@
 .header__search-input:active ~ .header__search-form {
   box-shadow: 0 0 3px 2px var(--color-primary);
 } */
+
+
+@media (max-width: 768px) {
+  .header__container {
+    flex-wrap: wrap;
+  }
+
+  .header__search-form {
+    width: 100%;
+    order: 1;
+    height: 50px;
+    padding-left: 55px;
+    background-position: left 10px center;
+  }
+}
