layout other-films

--- a/css/basic.css
+++ b/css/basic.css
@@ -38,6 +38,11 @@ button {
   cursor: pointer;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+}
+
 @media (max-width: 480px) {
   .container {
     padding: 0 15px;
