--- a/css/basic.css
+++ b/css/basic.css
@@ -24,7 +24,7 @@ img {
   height: auto;
 }
 
-h1, h2, p {
+h1, h2, p, ul {
   margin: 0;
 }
 
@@ -41,6 +41,11 @@ button {
 ul {
   list-style: none;
   padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 @media (max-width: 480px) {
