--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: Inter;
-  src: url("../fonts/Inter-Regular.woff2") format("woff2"),
+  src: local('Inter'),
+  url("../fonts/Inter-Regular.woff2") format("woff2"),
   url("../fonts/Inter-Regular.woff") format("woff2");
   font-weight: 400;
   font-display: swap;
@@ -8,7 +9,8 @@
 
 @font-face {
   font-family: Inter;
-  src: url("../fonts/Inter-Bold.woff2") format("woff2"),
+  src: local('Inter'),
+  url("../fonts/Inter-Bold.woff2") format("woff2"),
   url("../fonts/Inter-Bold.woff") format("woff2");
   font-weight: 700;
   font-display: swap;
@@ -16,15 +18,17 @@
 
 @font-face {
   font-family: Raleway;
-  src: url("../fonts/Raleway-Bold.woff2") format("woff2"),
+  src: local('Raleway'),
+  url("../fonts/Raleway-Bold.woff2") format("woff2"),
   url("../fonts/Raleway-Bold.woff") format("woff2");
   font-weight: 700;
   font-display: swap;
 }
 
 @font-face {
-  font-family: Inter;
-  src: url("../fonts/Raleway-ExtraBold.woff2") format("woff2"),
+  font-family: Raleway;
+  src: local('Raleway'),
+  url("../fonts/Raleway-ExtraBold.woff2") format("woff2"),
   url("../fonts/Raleway-ExtraBold.woff2") format("woff2");
   font-weight: 800;
   font-display: swap;
