--- a/css/film-week.css
+++ b/css/film-week.css
@@ -41,9 +41,24 @@
   color: var(--color-text);
   outline: none;
   transition: box-shadow .2s;
+  transition: color .2s;
 }
 .film-week__watch-btn:focus {
-  box-shadow: 0 0 3px 2px var(--color-primary)
+  box-shadow: 0 0 3px 2px var(--color-primary);
+  color: var(--color-primary);
+}
+
+.film-week__watch-btn:hover,
+.film-week__watch-trailer:hover {
+  border: 1.7px solid var(--color-primary);
+  color: var(--color-primary);
+  background-color: var(--color-second);
+  box-shadow: 0 0 3px 1px var(--color-primary);
+}
+
+.film-week__watch-btn:active,
+.film-week__watch-trailer:active {
+  box-shadow: 0 0 10px 5px var(--color-primary)
 }
 
 .film-week__watch-trailer {
